--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,12 +1,13 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Deploy
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
 on:
-  release:
-    types: [ published ]
+  push:
+    tags:
+      - "*"
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -19,15 +20,24 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-      - name: Login
+      - name: Set up QEMU
+        id: qemu
+        uses: docker/setup-qemu-action@master
+        with:
+          platforms: linux/amd64,linux/arm64,linux/ppc64le,linux/s390x
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v2
+        with:
+          driver-opts: image=moby/buildkit:master
+      - name: Login Docker
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
-      - name: Push
+      - name: Publish Docker Image
         run: |
-          DOCKER_RELEASE_TAG="tomhjx/busybox:${GITHUB_REF#refs/*/}"
-          docker build ${{ github.workspace }}/docker/build -t $DOCKER_RELEASE_TAG
-          docker push $DOCKER_RELEASE_TAG
+          DOCKER_RELEASE_TAG="tomhjx/busybox:${GITHUB_REF_NAME}"
+          ${{ github.workspace }}/pub-docker-image.sh $DOCKER_RELEASE_TAG
 
 
