--- a/docker/alpine3.18/Dockerfile
+++ b/docker/alpine3.18/Dockerfile
@@ -1,4 +1,4 @@
 FROM alpine:3.18
 
-RUN apk --no-cache --update --verbose add curl grep bash tcpdump && \
+RUN apk --no-cache --update --verbose add curl grep bash tcpdump nmap && \
     rm -rf /var/cache/apk/* /tmp/* /sbin/halt /sbin/poweroff /sbin/reboot
